<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_diner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.dleemcewen.tandemfieri.DinerMainMenu">

    <TextView
        android:text=""
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/dinerMainMenuName"/>

    <TextView
        android:text="@string/dinerMainMenuTitle"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dinerMainMenuName"
        android:layout_centerHorizontal="true"
        android:id="@+id/dinerMainMenuTitle" />

    <Button
        android:text="@string/dinerMainMenuPlaceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dinerMainMenuTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/dinerMainMenuPlaceOrderButton" />

    <Button
        android:text="@string/dinerMainMenuTrackOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dinerMainMenuPlaceOrderButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:id="@+id/dinerMainMenuTrackOrdersButton" />

    <Button
        android:text="@string/dinerMainMenuViewOrderHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dinerMainMenuTrackOrdersButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:id="@+id/dinerMainMenuViewOrderHistoryButton" />

    <Button
        android:text="@string/dinerMainMenuRateRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dinerMainMenuViewOrderHistoryButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:id="@+id/dinerMainMenuRateRestaurantButton" />
</RelativeLayout>
