<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driver_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.dleemcewen.tandemfieri.DriverMainMenu">

    <TextView
        android:text=""
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/driverMainMenuName"/>

    <TextView
        android:text="@string/driverMainMenuTitle"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverMainMenuName"
        android:layout_centerHorizontal="true"
        android:id="@+id/driverMainMenuTitle" />

    <Button
        android:text="@string/driverMainMenuViewCurrentOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverMainMenuTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/driverMainMenuViewCurrentOrderButton" />

    <Button
        android:text="@string/driverMainMenuViewAllOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverMainMenuViewCurrentOrderButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:id="@+id/driverMainMenuViewAllOrdersButton" />

</RelativeLayout>
